bug: fix responsive view on Iphone SE

--- a/src/components/RegisterForm/Pages/SecondPage/styles.scss
+++ b/src/components/RegisterForm/Pages/SecondPage/styles.scss
@@ -1,11 +1,15 @@
 form {
-  .inputs__secondpage {
-    display: flex;
-  }
-  .actions__secondpage {
-        padding: 20px 20px;
-        padding-bottom: 0px;
-        display: flex;
-        justify-content: flex-end;
-  }
+	.inputs__secondpage {
+		display: flex;
+	}
+	.actions__secondpage {
+		padding: 20px 20px;
+		padding-bottom: 0px;
+		display: flex;
+		justify-content: flex-end;
+		@media (max-width: 470px) {
+			flex-direction: column;
+      align-items: center;
+		}
+	}
 }
