--- a/src/components/Shared/ButtonAnimatedFoward/style.scss
+++ b/src/components/Shared/ButtonAnimatedFoward/style.scss
@@ -19,6 +19,10 @@
     text-align: center;
     cursor: pointer;
 
+    @media (max-width: 470px) {
+			margin-top: 10px;
+		}
+
     &>span {
       position: absolute;
       display: flex;
